force-app/main/default/objects/Csv_Parser_Save_Job__c/Csv_Parser_Save_Job__c.object-meta.xml
<CustomObject>
    <description>Stores the job details of the CSV parser job</description>
    <label>Csv Parser Save Job</label>
    <nameField>
        <label>Csv Parser Save Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Csv Parser Save Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>