force-app/main/default/objects/Csv_Parser_Save_Job__c/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <description>Record Ids of records Processed by this Job</description>
    <inlineHelpText>Record Ids of records Processed by this Job</inlineHelpText>
    <label>Record Ids</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>