force-app/main/default/objects/Csv_Parser_Save_Job__c/fields/Sobject_Type_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Type_Api_Name__c</fullName>
    <description>The Api Name of the Sobject Type that was mapped</description>
    <inlineHelpText>The Api Name of the Sobject Type that was mapped</inlineHelpText>
    <label>Sobject Type Api Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>