force-app/main/default/objects/Csv_Parser_Save_Job__c/fields/Total_Number_Of_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Records__c</fullName>
    <description>Total number of records processed by this Job</description>
    <label>Total Number Of Records</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>